Gap fixed navbar on large layout

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -17,10 +17,16 @@ body {
     background: #000;
     background: rgba(0, 0, 0, 0.8);
     background-clip: padding-box;
-    top: 30px;
+    top: 0;
     .nav.navbar-nav > .active > a {
         background-color: rgba(255, 255, 255, 0.7);
     }
+}
+
+@media screen and (min-width: 768px) {
+    .nav.navbar-default {
+        top: 30px; 
+    } 
 }
 
 .banner.container {
